--- a/src/admin/js/react/components/invoice/invoice-single/style.scoped.scss
+++ b/src/admin/js/react/components/invoice/invoice-single/style.scoped.scss
@@ -99,9 +99,14 @@
   padding: 20px;
   border-radius: 20px;
 }
+.ncpi .pi-info-logo {
+  position: relative;
+  top: 50%;
+  transform: translatey(-50%);
+}
 .ncpi .pi-info-logo img {
-  width: 125px;
-  height: 125px;
+  max-width: 300px;
+  height: auto;
   border-radius: 8px;
   padding: 10px;
   border-radius: 5px;
@@ -180,7 +185,7 @@
 @media screen and (max-width: 500px) {
   .pi-to,
 .pi-from-to {
-    width: 100% !important;
+    max-width: 100% !important;
     float: none !important;
   }
 
@@ -263,7 +268,6 @@
 .ncpi .pi-add-term .pi-group-item ul {
   margin: 0;
   padding-left: 20px;
-  list-style-type: lower-alpha;
   margin-bottom: 7px;
 }
 .ncpi .pi-add-term .pi-group-item ul li {
@@ -315,4 +319,4 @@
   border: 1px solid #718096;
   border-radius: 10px;
   width: 100%;
-} 
+}
