added color picker and invoice

--- a/src/admin/js/react/components/invoice/invoice-single/style.scoped.scss
+++ b/src/admin/js/react/components/invoice/invoice-single/style.scoped.scss
@@ -142,7 +142,7 @@
   display: block;
 }
 .ncpi .pi-from-content .pi-to {
-  float: right;
+  margin-left: auto;
 }
 .ncpi .pi-from-content .pi-from {
   padding: 10px 20px;
@@ -319,4 +319,4 @@
   border: 1px solid #718096;
   border-radius: 10px;
   width: 100%;
-}
+} 
