fixed some payment issues

--- a/src/admin/scss/dashboard.scss
+++ b/src/admin/scss/dashboard.scss
@@ -33,7 +33,7 @@ h4.from-title {
     -ms-transform: scale(0.5);
     transform: scale(0.5);
     transform-origin: left top; 
-    height: 344px;
+    // height: 344px;
     .pi-inv {
         width: 740px;
     }
