invoice icon change

--- a/src/admin/js/react/inv-template/scss/all.scoped.scss
+++ b/src/admin/js/react/inv-template/scss/all.scoped.scss
@@ -1,4 +1,4 @@
-:root { 
+:root {
     --pi-inv-secondary: #4C6FFF;
     --pi-inv-text-primary:#000000;
     --pi-inv-text-secondary:#1A202C;
@@ -8,289 +8,271 @@
     --pi-inv-white:#fff;
     --pi-inv-medium: 16px;
     --pi-inv-small: 12px;
-}
-.pi-inv-wrapper {
+  }
+  
+  .pi-inv-wrapper {
     background-color: #E5E5E5;
-}
-.pi-inv {  
-    a {
-        text-decoration: none;
-        color:inherit;
-    } 
-    * {
-        margin: 0;
-        padding: 0;
-        box-sizing: border-box;
-    }
+  }
+  
+  .pi-inv {
     max-width: 794px;
     margin: 0 auto;
-    background-color:var(--pi-inv-white);
-
-    
-
-    
-    .pi-hedear {
-        margin-top: 10px;
-        display: flex;
-        justify-content: space-between;
-    } 
-    .pi-from {
-        width: 45%;
-    }
-    .pi-from address {
-        font-family: Inter;
-        font-style: normal;
-        font-weight: 600;
-        font-size: var(--pi-inv-small);
-        line-height: 200%;
-        color: var(--pi-inv-text-4th);
-        margin-bottom: 15px;
-        margin-top: 18px;
-        span,a{
-            font-weight: 500;
-        }
-    }
-    .pi-from-date p {
-        font-family: Inter;
-        font-style: normal;
-        font-weight: 600;
-        font-size: var(--pi-inv-small);
-        line-height: 200%;
-        span{
-            font-weight: 400;
-        }
-    }
-    .pi-from-time {
-        display:flex;
-        column-gap: 18px;
-    }
-
+    background-color: var(--pi-inv-white);
     /* ==== invoece to address */
-    .pi-inv-title h2 {
-        font-family: Inter;
-        font-style: normal;
-        font-weight: bold;
-        font-size: 30px;
-        line-height: 100%;
-        color: var(--pi-inv-text-4th);
-        margin-bottom: 18px;
-        text-transform: uppercase;
-    }
-    .pi-to {
-        width: 35%;
-    }
-    .pi-to p {
-        font-style: normal;
-        font-weight: 500;
-        font-size: var(--pi-inv-small);
-        line-height: 200%;
-        color: var(--pi-inv-text-3th); 
-        font-family: Inter;
-        letter-spacing: .07px;
-    }
-    .pi-to h6 {
-        font-style: normal;
-        font-weight: bold;
-        font-size: var(--pi-inv-small);
-        line-height: 200%;
-        color: var(--pi-inv-text-3th); 
-        font-family: Inter;
-        letter-spacing: .07px;
-    }
-    .pi-to address {
-        font-family: Inter;
-        font-style: normal;
-        font-weight: 600;
-        font-size: var(--pi-inv-small);
-        line-height: 200%;
-        color: var(--pi-inv-text-3th);
-        // margin-bottom: 36px;
-        margin-top: 5px;
-        p,a,span{
-            font-weight: 400;
-            margin-top:-5px;
-        }
-    }
-
-    // invoece common table
-    .pi-items-table table {
-        border-spacing: 0;
-        width: 100%;
-        margin-top: 30px;
-        margin-bottom: 24px;
-    }
-    .pi-items-table table thead th {
-        padding: 10px 35px;
-        font-family: Inter;
-        font-style: normal;
-        font-weight: 600;
-        font-size:var(--pi-inv-small);
-        line-height: 140%;
-        text-align: left;
-    }
-  
-    .pi-items-table table td {
-        font-family: Inter;
-        font-style: normal;
-        font-weight: 600;
-        font-size: var(--pi-inv-small);
-        line-height: 150%;
-        padding: 10px 0px 10px 35px;
-        color: var(--pi-inv-text-3th);
-        // text-align: left;
-        span{
-            color:var(--pi-inv-text-5th);
-            font-weight: 400;
-        }
-    }
-
-    .pi-items-table table tr th:first-child{
-        // text-align: center;
-        padding: 10px 0px 10px 20px;
-    }
-    .pi-items-table table tr td:first-child{
-        // text-align: center;
-        padding: 10px 0px 10px 20px;
-    }
     /* pi-banking wrap */
-    .pi-bank-info {
-        display: flex;
-        justify-content: space-between;
-        column-gap: 30px;
-        margin-bottom: 15px;
-
+  }
+  .pi-inv a {
+    text-decoration: none;
+    color: inherit;
+  }
+  .pi-inv * {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+  }
+  .pi-inv .pi-hedear {
+    margin-top: 10px;
+    display: flex;
+    justify-content: space-between;
+  }
+  .pi-inv .pi-from {
+    width: 45%;
+  }
+  .pi-inv .pi-from address {
+    font-family: Inter;
+    font-style: normal;
+    font-weight: 600;
+    font-size: var(--pi-inv-small);
+    line-height: 200%;
+    color: var(--pi-inv-text-4th);
+    margin-bottom: 15px;
+    margin-top: 18px;
+  }
+  .pi-inv .pi-from address span, .pi-inv .pi-from address a {
+    font-weight: 500;
+  }
+  .pi-inv .pi-from-date p {
+    font-family: Inter;
+    font-style: normal;
+    font-weight: 600;
+    font-size: var(--pi-inv-small);
+    line-height: 200%;
+  }
+  .pi-inv .pi-from-date p span {
+    font-weight: 400;
+  }
+  .pi-inv .pi-from-time {
+    display: flex;
+    -moz-column-gap: 18px;
+         column-gap: 18px;
+  }
+  .pi-inv .pi-inv-title h2 {
+    font-family: Inter;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 30px;
+    line-height: 100%;
+    color: var(--pi-inv-text-4th);
+    margin-bottom: 18px;
+    text-transform: uppercase;
+  }
+  .pi-inv .pi-to {
+    width: 35%;
+  }
+  .pi-inv .pi-to p {
+    font-style: normal;
+    font-weight: 500;
+    font-size: var(--pi-inv-small);
+    line-height: 200%;
+    color: var(--pi-inv-text-3th);
+    font-family: Inter;
+    letter-spacing: 0.07px;
+  }
+  .pi-inv .pi-to h6 {
+    font-style: normal;
+    font-weight: bold;
+    font-size: var(--pi-inv-small);
+    line-height: 200%;
+    color: var(--pi-inv-text-3th);
+    font-family: Inter;
+    letter-spacing: 0.07px;
+  }
+  .pi-inv .pi-to address {
+    font-family: Inter;
+    font-style: normal;
+    font-weight: 600;
+    font-size: var(--pi-inv-small);
+    line-height: 200%;
+    color: var(--pi-inv-text-3th);
+    margin-top: 5px;
+  }
+  .pi-inv .pi-to address p, .pi-inv .pi-to address a, .pi-inv .pi-to address span {
+    font-weight: 400;
+    margin-top: -5px;
+  }
+  .pi-inv .pi-items-table table {
+    border-spacing: 0;
+    width: 100%;
+    margin-top: 30px;
+    margin-bottom: 24px;
+  }
+  .pi-inv .pi-items-table table thead th {
+    padding: 10px 35px;
+    font-family: Inter;
+    font-style: normal;
+    font-weight: 600;
+    font-size: var(--pi-inv-small);
+    line-height: 140%;
+    text-align: left;
+  }
+  .pi-inv .pi-items-table table td {
+    font-family: Inter;
+    font-style: normal;
+    font-weight: 600;
+    font-size: var(--pi-inv-small);
+    line-height: 150%;
+    padding: 10px 0px 10px 35px;
+    color: var(--pi-inv-text-3th);
+  }
+  .pi-inv .pi-items-table table td span {
+    color: var(--pi-inv-text-5th);
+    font-weight: 400;
+  }
+  .pi-inv .pi-items-table table tr th:first-child {
+    padding: 10px 0px 10px 20px;
+  }
+  .pi-inv .pi-items-table table tr td:first-child {
+    padding: 10px 0px 10px 20px;
+  }
+  .pi-inv .pi-bank-info {
+    display: flex;
+    justify-content: space-between;
+    -moz-column-gap: 30px;
+         column-gap: 30px;
+    margin-bottom: 15px;
+  }
+  .pi-inv .pi-bank-info h4 {
+    font-family: Inter;
+    font-style: normal;
+    font-weight: bold;
+    font-size: var(--pi-inv-medium);
+    line-height: 140%;
+    color: #1A202C;
+  }
+  .pi-inv .pi-bank-info table {
+    margin-top: 10px;
+  }
+  .pi-inv .pi-bank-info table th {
+    text-align: left;
+    padding-right: 20px;
+    padding-left: 0;
+    font-family: Inter;
+    font-style: normal;
+    font-weight: 600;
+    font-size: var(--pi-inv-small);
+    line-height: 150%;
+    color: var(--pi-inv-text-primary);
+    padding-bottom: 4px;
+  }
+  .pi-inv .pi-bank-info table td {
+    font-family: Inter;
+    font-style: normal;
+    font-weight: normal;
+    font-size: var(--pi-inv-small);
+    line-height: 150%;
+    color: var(--pi-inv-text-primary);
+    text-align: left;
+    padding-bottom: 4px;
+  }
+  .pi-inv .pi-amounting table {
+    border-spacing: 0;
+    width: 210px;
+  }
+  .pi-inv .pi-amounting table tr.pi-before-total th {
+    padding-bottom: 10px;
+  }
+  .pi-inv .pi-amounting table th {
+    font-family: Inter;
+    font-style: normal;
+    font-weight: bold;
+    font-size: var(--pi-inv-medium);
+    line-height: 140%;
+    color: var(--pi-inv-text-primary);
+    padding-left: 28px;
+  }
+  .pi-inv .pi-amounting .pi-table-bg th {
+    color: var(--pi-inv-white);
+    padding: 6px;
+    padding-left: 28px;
+    padding-right: 10px;
+  }
+  .pi-inv .pi-amounting .pi-table-bg td {
+    color: var(--pi-inv-white);
+    line-height: 140%;
+  }
+  .pi-inv .pi-note-wrap {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+  }
+  .pi-inv .pi-terms h4 {
+    margin-top: 10px;
+    font-style: normal;
+    font-weight: bold;
+    font-size: var(--pi-inv-medium);
+    line-height: 150%;
+    color: var(--pi-inv-text-secondary);
+  }
+  .pi-inv .pi-terms ul {
+    list-style-type: dot;
+  }
+  .pi-inv .pi-terms ul li {
+    font-family: Inter;
+    font-style: normal;
+    font-weight: normal;
+    font-size: var(--pi-inv-small);
+    line-height: 150%;
+    color: var(--pi-inv-text-5th);
+    margin-left: 15px;
+  }
+  .pi-inv .mt-35 {
+    margin-top: 35px;
+  }
+  .pi-inv .pi-note h4 {
+    font-family: Inter;
+    font-style: normal;
+    font-weight: bold;
+    font-size: var(--pi-inv-medium);
+    line-height: 150%;
+    color: var(--pi-inv-text-secondary);
+  }
+  .pi-inv .pi-note p {
+    font-family: Inter;
+    font-style: normal;
+    font-weight: normal;
+    font-size: var(--pi-inv-small);
+    line-height: 200%;
+    color: var(--pi-inv-text-5th);
+  }
+  .pi-inv .pi-sign {
+    text-align: center;
+    margin-right: 60px;
+  }
+  .pi-inv .pi-sign h4 {
+    font-style: normal;
+    font-weight: bold;
+    font-size: var(--pi-inv-medium);
+    line-height: 200%;
+    color: var(--pi-inv-text-secondary);
+  }
+  .pi-inv .pi-border {
+    border: 0.5px solid #A0AEC0;
+    margin: 0 -30px;
+    margin-top: 8px;
+  }
+  @media screen and (max-width: 500px) {
+    .pi-inv .pi-body {
+      margin: 0 15px;
     }
-    .pi-bank-info h4 {
-        font-family: Inter;
-        font-style: normal;
-        font-weight: bold;
-        font-size: var(--pi-inv-medium);
-        line-height: 140%;
-        color: #1A202C;
-    }
-    .pi-bank-info table {
-        margin-top: 10px;
-    }
-
-    .pi-bank-info table th {
-        text-align: left;
-        padding-right: 20px;
-        padding-left: 0;
-        font-family: Inter;
-        font-style: normal;
-        font-weight: 600;
-        font-size: var(--pi-inv-small);
-        line-height: 150%;
-        color: var(--pi-inv-text-primary);
-        padding-bottom: 4px;
-    }
-    .pi-bank-info table td {
-        font-family: Inter;
-        font-style: normal;
-        font-weight: normal;
-        font-size:var(--pi-inv-small);
-        line-height: 150%;
-        color:var(--pi-inv-text-primary);
-        text-align: left;
-        padding-bottom: 4px;
-
-    }
-    .pi-amounting table {
-        border-spacing:0;
-        width: 210px;
-    }
-    .pi-amounting table tr.pi-before-total th{
-        padding-bottom: 10px;
-    }
-    .pi-amounting table th{
-        font-family: Inter;
-        font-style: normal;
-        font-weight: bold;
-        font-size: var(--pi-inv-medium);
-        line-height: 140%;
-        color:var(--pi-inv-text-primary);
-        padding-left: 28px;
-    }
-    // TODO margin-top 
-    .pi-amounting .pi-table-bg th {
-        color:var(--pi-inv-white);
-        padding: 6px;
-        padding-left: 28px;
-        padding-right: 10px;
-    }
-    .pi-amounting .pi-table-bg td {
-        color:var(--pi-inv-white);
-        line-height: 140%;
-    }
-
-
-     .pi-note-wrap {
-        display: flex;
-        justify-content: space-between;
-        align-items: flex-end;
-    }
-   
-    .pi-terms h4 {
-        margin-top: 10px;
-        font-style: normal;
-        font-weight: bold;
-        font-size: var(--pi-inv-medium);
-        line-height: 150%;
-        color: var(--pi-inv-text-secondary);
-
-    }
-    .pi-terms ul {
-        list-style-type:dot;
-        li{
-            font-family: Inter;
-            font-style: normal;
-            font-weight: normal;
-            font-size:var(--pi-inv-small);
-            line-height: 150%;
-            color:var(--pi-inv-text-5th);
-            margin-left: 15px;
-        }
-    }
-    .mt-35 {
-        margin-top: 35px;
-    }
-    .pi-note h4 {
-        font-family: Inter;
-        font-style: normal;
-        font-weight: bold;
-        font-size: var(--pi-inv-medium);
-        line-height: 150%;
-        color: var(--pi-inv-text-secondary);
-    }
-    .pi-note p {
-        font-family: Inter;
-        font-style: normal;
-        font-weight: normal;
-        font-size:var(--pi-inv-small);
-        line-height: 200%;
-        color:var(--pi-inv-text-5th);
-    }
-    .pi-sign {
-        text-align: center;
-        margin-right: 60px;
-    }
-    .pi-sign h4 {
-        font-style: normal;
-        font-weight: bold;
-        font-size: var(--pi-inv-medium);
-        line-height: 200%;
-        color: var(--pi-inv-text-secondary);
-    }
-    .pi-border {
-        border: 0.5px solid #A0AEC0;
-        margin: 0 -30px;
-        margin-top: 8px;
-    }
-
-    @media screen and (max-width: 500px) {
-       .pi-body{
-           margin: 0 15px;
-       }
-
-    }
-}
+  }
+  
