--- a/src/admin/js/react/out-components/invoice/payment/stripe/style.css
+++ b/src/admin/js/react/out-components/invoice/payment/stripe/style.css
@@ -17,12 +17,18 @@
 }
 
 .StripeElement--webkit-autofill {
-  background: transparent !important;
+  background: #f7fafc !important;
 }
 
 .StripeElement {
   width: 100%;
-  padding: 11px 15px 11px 0;
+  margin-top: 18px;
+  padding: 8px;
+  
+  border-radius: 5px;
+  background-color: #f7fafc !important;
+  border: 1px solid #dddddda8;
+
 }
  
 .SubmitButton.SubmitButton--error {
@@ -43,10 +49,9 @@
   color: #000;
   position: absolute;
   display: flex;
-  justify-content: center;
-  padding: 0 15px;
+  justify-content: center; 
   font-size: 13px;
-  margin-top: 0px;
+  margin-top: 10px;
   width: 100%;
   transform: translateY(-15px);
   opacity: 0;
@@ -57,7 +62,8 @@
 }
 
 .ErrorMessage svg {
-  margin-right: 10px;
+  margin-right: 6px;
+  margin-top: 2px; 
 }
 
 .Result { 
