--- a/src/admin/js/react/components/invoice/invoice-single/style.scoped.scss
+++ b/src/admin/js/react/components/invoice/invoice-single/style.scoped.scss
@@ -59,6 +59,9 @@
   color: var(--bg-color-black);
   margin-top: 10px;
 }
+.ncpi .pi-invoice-tab-content .pi-popup-content {
+  margin: 75px auto;
+}
 
 .ncpi .pi-add-info-content {
   padding: 25px 50px;
@@ -107,10 +110,7 @@
 .ncpi .pi-info-logo img {
   max-width: 300px;
   height: auto;
-  border-radius: 8px;
-  padding: 10px;
   border-radius: 5px;
-  border: 1px dotted;
 }
 .ncpi .pi-info-form {
   float: right;
@@ -182,7 +182,7 @@
   line-height: 25px;
 }
 
-@media screen and (max-width: 500px) {
+@media screen and (max-width: 550px) {
   .pi-to,
 .pi-from-to {
     max-width: 100% !important;
@@ -319,4 +319,4 @@
   border: 1px solid #718096;
   border-radius: 10px;
   width: 100%;
-} 
+}
