--- a/src/admin/scss/dashboard.scss
+++ b/src/admin/scss/dashboard.scss
@@ -14,6 +14,11 @@
 }
 .ce-block__content, .ce-toolbar__content { max-width:calc(100% - 80px) !important; } .cdx-block { max-width: 100% !important; } 
 
+//invoice item radius without edit column
+.ncpi .pi-info-table-content .pi-info-table thead tr th:last-child {
+    border-radius: 0 15px 0 0;
+}
+
 //TODO: temporary css
 h4.from-title {
     font-family: "Inter", sans-serif !important;
