--- a/src/admin/scss/partials/_main.scss
+++ b/src/admin/scss/partials/_main.scss
@@ -2828,15 +2828,21 @@ html {
 .ncpi .pi-social-content .pi-social-icon .pi-skype {
   background-color: rgba(0, 175, 240, 0.08);
 }
-.ncpi .pi-share-popup input[type=text] {
+.ncpi .pi-field-copy {
   position: relative;
+}
+.ncpi .pi-field-copy input[type=text] {
   padding: 9px !important;
   padding-right: 55px !important;
+  width: 100% !important;
+  border: 1px solid #dddddda8;
+  border-radius: 5px;
+  background-color: #f7fafc;
 }
-.ncpi .pi-share-popup .pi-copy {
+.ncpi .pi-field-copy .pi-copy {
   position: absolute;
   right: 8px;
-  top: 8px;
+  top: 4px;
   padding: 5px;
   text-transform: uppercase;
   font-weight: 500;
@@ -3742,7 +3748,7 @@ select {
   padding: 9px;
 }
 .ncpi .pi-form-style-four {
-  margin-top: -5px;
+  margin-top: 0px;
 }
 .ncpi .pi-form-style-four .pi-btn {
   width: 100%;
