--- a/src/admin/scss/dashboard.scss
+++ b/src/admin/scss/dashboard.scss
@@ -19,6 +19,12 @@
     border-radius: 0 15px 0 0;
 }
 
+//for backend only 
+/* .ncpi .pi-right-content {
+    padding: 20px 30px 40px;
+    height: auto !important;
+} */
+
 //TODO: temporary css
 h4.from-title {
     font-family: "Inter", sans-serif !important;
