fixed welcome page

--- a/src/admin/scss/dashboard.scss
+++ b/src/admin/scss/dashboard.scss
@@ -20,10 +20,10 @@
 }
 
 //for backend only 
-/* .ncpi .pi-right-content {
+.ncpi .pi-right-content {
     padding: 20px 30px 40px;
     height: auto !important;
-} */
+}
 
 //TODO: temporary css
 h4.from-title {
