--- a/src/admin/scss/partials/_main.scss
+++ b/src/admin/scss/partials/_main.scss
@@ -2559,6 +2559,16 @@ html {
   margin-bottom: 10px;
   margin-top: 0;
 }
+.ncpi .pi-right-content h1 sup {
+  font-size: 12px;
+  font-weight: 400;
+  background-color: #f7936f;
+  padding: 3px 6px;
+  border-radius: 25px;
+  top: -15px;
+  left: 5px;
+  color: #fff;
+}
 .ncpi .pi-empty-content {
   margin-top: 90px;
 }
@@ -2604,22 +2614,30 @@ html {
 .ncpi .pi-cards {
   margin-bottom: 25px;
 }
-.ncpi .pi-cards .pi-bg-air-white {
+.ncpi .pi-cards .row .col {
+  padding-right: 7px;
+}
+.ncpi .pi-cards h2 {
+  font-size: 24px;
+  font-weight: 500;
+  margin-bottom: 20px;
+}
+.ncpi .pi-cards .pi-cards-content {
   border-radius: 20px;
   padding: 25px;
 }
-.ncpi .pi-cards .pi-bg-air-white span {
+.ncpi .pi-cards .pi-cards-content span {
   font-weight: 500;
   text-transform: capitalize;
   font-size: 14px;
 }
-.ncpi .pi-cards .pi-bg-air-white h4 {
+.ncpi .pi-cards .pi-cards-content h4 {
   font-size: 24px;
   font-weight: bold;
   margin-top: 5px;
 }
 @media screen and (max-width: 992px) {
-  .ncpi .pi-cards .pi-bg-air-white {
+  .ncpi .pi-cards .pi-cards-content {
     margin-bottom: 30px;
   }
 }
@@ -2657,6 +2675,125 @@ html {
   .ncpi .pi-search-box svg {
     top: 8px;
   }
+}
+.ncpi .pi-add-item-main-content {
+  margin-bottom: 20px;
+}
+.ncpi .pi-add-item-main-content .row > div {
+  padding-right: 12px;
+  padding-left: 12px;
+}
+.ncpi .pi-add-item-main-content .pi-add-image-content svg {
+  position: relative;
+  top: 50%;
+  transform: translatey(-50%);
+}
+.ncpi .pi-add-item-main-content .pi-add-item-content {
+  margin-bottom: 20px;
+}
+.ncpi .pi-add-item-main-content .pi-item-content {
+  min-height: 135px;
+  display: flex;
+  padding: 20px 35px;
+  border: 3px solid #edf2f7;
+  border-radius: 15px 15px 0 0;
+  border-bottom: 0;
+}
+.ncpi .pi-add-item-main-content .pi-item-content .pi-add-item-text {
+  margin-left: 20px;
+}
+.ncpi .pi-add-item-main-content .pi-item-content .pi-add-item-text h3 {
+  font-size: 18px;
+  font-weight: 500;
+}
+.ncpi .pi-add-item-main-content .pi-item-content .pi-add-item-text p {
+  margin-top: 0px;
+  font-size: 12px;
+  margin-bottom: 0;
+}
+.ncpi .pi-add-item-main-content .pi-btn {
+  width: 100%;
+  border-radius: 0 0 15px 15px;
+}
+.ncpi .pi-add-item-main-content .pi-btn svg path {
+  fill: var(--text-color-white);
+}
+.ncpi .pi-featurs-main-content {
+  margin-top: 50px;
+  padding: 40px 30px 20px;
+  border-radius: 20px;
+}
+.ncpi .pi-featurs-main-content .row > div {
+  padding-right: 10px;
+  padding-left: 10px;
+}
+.ncpi .pi-featurs-main-content .pi-featurs-title {
+  font-size: 20px;
+  font-weight: 500;
+  margin-bottom: 20px;
+}
+.ncpi .pi-featurs-main-content .pi-featurs-title span {
+  border-radius: 25px;
+  padding: 6px 15px;
+  text-transform: uppercase;
+  color: #fff;
+  font-size: 16px;
+  font-weight: 500;
+  margin-left: 10px;
+}
+.ncpi .pi-featurs-content {
+  margin-bottom: 20px;
+  text-align: center;
+  background-color: #fff;
+  padding: 30px 15px;
+  border-radius: 15px;
+}
+.ncpi .pi-featurs-content .pi-featurs-text h4 {
+  font-size: 18px;
+  font-weight: 500;
+  margin-top: 15px;
+}
+.ncpi .pi-featurs-content .pi-featurs-text p {
+  font-size: 12px;
+  margin-top: 0;
+}
+.ncpi .pi-client-feedback {
+  margin-top: 25px;
+}
+.ncpi .pi-client-feedback .row > div {
+  padding-right: 10px;
+  padding-left: 10px;
+}
+.ncpi .pi-client-feedback .pi-feedback-content.pi-request {
+  padding: 30px 60px;
+}
+.ncpi .pi-client-feedback .pi-feedback-content {
+  padding: 30px 40px;
+  border-radius: 20px;
+  color: #fff;
+  margin-bottom: 20px;
+  position: relative;
+  overflow: hidden;
+}
+.ncpi .pi-client-feedback .pi-feedback-content h2 {
+  font-weight: 700;
+  font-size: 24px;
+}
+.ncpi .pi-client-feedback .pi-feedback-content p {
+  font-size: 12px;
+  margin-top: 5px;
+  margin-bottom: 20px;
+}
+.ncpi .pi-client-feedback .pi-feedback-content svg {
+  position: absolute;
+  left: 0;
+  top: -20px;
+}
+.ncpi .pi-client-feedback .pi-btn {
+  font-size: 12px;
+  padding: 12px 15px;
+  z-index: 1;
+  position: relative;
 }
 
 /*-------------------------------------------------------------- 
@@ -3204,18 +3341,15 @@ html {
   }
 }
 
-.pi-form-accrodion,
 .pi-form-accordion {
   /* Accordion styles */
 }
-.pi-form-accrodion .pi-tab,
 .pi-form-accordion .pi-tab {
   width: 100%;
   overflow: hidden;
   margin-top: -15px;
   margin-bottom: 10px;
 }
-.pi-form-accrodion .pi-tab-label,
 .pi-form-accordion .pi-tab-label {
   display: flex;
   justify-content: space-between;
@@ -3227,14 +3361,12 @@ html {
   border-radius: 5px;
   font-size: 15px;
 }
-.pi-form-accrodion .pi-tab-label::after,
 .pi-form-accordion .pi-tab-label::after {
   content: "❯";
   width: 1em;
   height: 1em;
   transition: all 0.35s;
 }
-.pi-form-accrodion .pi-tab-content,
 .pi-form-accordion .pi-tab-content {
   max-height: 0;
   color: #000;
@@ -3242,7 +3374,6 @@ html {
   transition: all 0.35s;
   border-radius: 0 0 5px 5px;
 }
-.pi-form-accrodion .pi-tab input[type=checkbox],
 .pi-form-accordion .pi-tab input[type=checkbox] {
   margin-bottom: 12px;
   margin-right: 5px;
@@ -3250,14 +3381,12 @@ html {
   position: relative;
   top: 1px;
 }
-.pi-form-accrodion .pi-tab input[type=radio],
 .pi-form-accordion .pi-tab input[type=radio] {
   position: relative;
   top: 36px;
   left: 12px;
   color: #000;
 }
-.pi-form-accrodion .pi-tab .pi-payment-btn,
 .pi-form-accordion .pi-tab .pi-payment-btn {
   padding: 10px 25px;
   border: 1px solid #dddddda8;
@@ -3268,7 +3397,6 @@ html {
   cursor: pointer;
   font-size: 14px;
 }
-.pi-form-accrodion .pi-tab .pi-payment-bank-content,
 .pi-form-accordion .pi-tab .pi-payment-bank-content {
   position: relative;
   display: flex;
@@ -3278,18 +3406,15 @@ html {
   margin-bottom: 10px;
   cursor: pointer;
 }
-.pi-form-accrodion .pi-tab .pi-payment-bank-content .bank-text-content span,
 .pi-form-accordion .pi-tab .pi-payment-bank-content .bank-text-content span {
   position: absolute;
   right: 10px;
   top: 50%;
   transform: translateY(-50%);
 }
-.pi-form-accrodion .pi-tab .pi-payment-bank-content .pi-bank-image,
 .pi-form-accordion .pi-tab .pi-payment-bank-content .pi-bank-image {
   margin-right: 5px;
 }
-.pi-form-accrodion .pi-tab .pi-payment-bank-content .pi-bank-image span,
 .pi-form-accordion .pi-tab .pi-payment-bank-content .pi-bank-image span {
   background-color: var(--bg-color-air-white);
   padding: 12px 7px 5px;
@@ -3297,49 +3422,39 @@ html {
   position: relative;
   top: 30%;
 }
-.pi-form-accrodion .pi-tab .pi-payment-bank-content .pi-bank-title,
 .pi-form-accordion .pi-tab .pi-payment-bank-content .pi-bank-title {
   font-size: 12px;
   font-weight: 500;
   line-height: 17px;
   margin-top: 5px;
 }
-.pi-form-accrodion .pi-tab .pi-payment-bank-content .pi-bank-subtitle,
 .pi-form-accordion .pi-tab .pi-payment-bank-content .pi-bank-subtitle {
   margin: 0;
   font-size: 10px;
 }
-.pi-form-accrodion .pi-tab input[type=radio]:checked,
 .pi-form-accordion .pi-tab input[type=radio]:checked {
   background-color: #93e026;
 }
-.pi-form-accrodion .pi-arrow-none:after,
 .pi-form-accordion .pi-arrow-none:after {
   content: "" !important;
 }
-.pi-form-accrodion input:checked + .pi-tab-label,
 .pi-form-accordion input:checked + .pi-tab-label {
   color: #000;
 }
-.pi-form-accrodion input:checked + .pi-tab-label::after,
 .pi-form-accordion input:checked + .pi-tab-label::after {
   transform: rotate(90deg);
   margin-top: 5px;
 }
-.pi-form-accrodion input:checked ~ .pi-tab-content,
 .pi-form-accordion input:checked ~ .pi-tab-content {
   max-height: 100vh;
   padding: 15px 15px 25px;
 }
-.pi-form-accrodion .pi-payment-buttons button:first-child,
 .pi-form-accordion .pi-payment-buttons button:first-child {
   margin-right: 7px;
 }
-.pi-form-accrodion .pi-payment-buttons button:last-child,
 .pi-form-accordion .pi-payment-buttons button:last-child {
   margin-right: 0;
 }
-.pi-form-accrodion .pi-payment-buttons button,
 .pi-form-accordion .pi-payment-buttons button {
   padding: 12px 42px;
   font-size: 12px;
@@ -3470,6 +3585,9 @@ html {
 }
 .ncpi .pi-mt-15 {
   margin-top: 15px;
+}
+.ncpi .pi-m-40 {
+  margin: 40px 0px 20px;
 }
 .ncpi .pi-mt-3 {
   position: relative;
@@ -3786,10 +3904,32 @@ select {
   --bg-color-husky: #e1e8ff;
   --bg-color-air-white: #edf2f7;
   --bg-color-deutzia-white: #f7fafc;
+  --bg-color-clear-moon: #f9f6ea;
+  --bg-color-air-mint: #d7f4f1;
+  --bg-color-petal: #f7dfec;
+  --bg-color-winter-mist: #e6ffe7;
   --text-color-black: #000;
   --text-color-white: #fff;
   --text-color-blue: #4c6fff;
+  --text-color-red: #f16063;
+  --text-color-green: #45ac9d;
   --border-color-gray: #dddddda8;
+}
+
+.pi-bg-clear-moon {
+  background-color: var(--bg-color-clear-moon);
+}
+
+.pi-bg-air-mint {
+  background-color: var(--bg-color-air-mint);
+}
+
+.pi-bg-clear-petal {
+  background-color: var(--bg-color-petal);
+}
+
+.pi-bg-clear-winter-mist {
+  background-color: var(--bg-color-winter-mist);
 }
 
 .pi-bg-cold-morning {
@@ -3850,6 +3990,14 @@ select {
 
 .pi-color-blue {
   color: var(--text-color-blue) !important;
+}
+
+.pi-color-red {
+  color: var(--text-color-red) !important;
+}
+
+.pi-color-green {
+  color: var(--text-color-green) !important;
 }
 
 .pi-color-black {
